--- a/_posts/2024-06-06-CTFGuide.md
+++ b/_posts/2024-06-06-CTFGuide.md
@@ -132,7 +132,7 @@ IDA pro / Ghidra
 
 **RSA primer tool**
 
-[factordb.com](http://factordb.com/)
+💡 **FactorDB**
 
 [Online Malbolge Compiler](https://www.tutorialspoint.com/execute_malbolge_online.php)
 
@@ -284,7 +284,7 @@ Check .robots.txt
 ```
 **Dev Tools**
 
-**JWT Cookies** [JSON Web Tokens](jwt.io)
+**JWT Cookies** [JSON Web Tokens](https://jwt.io/)
 
 **Flask Application**
 
